fix navbar styling on mobile

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ i.fa-caret-down {
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  padding: 0 1em 0 2em;
+  padding: 0 1em 0 1em;
 }
 
 .navbar-item {
